--- a/udacity-c3-deployment/k8s/frontend-service.yaml
+++ b/udacity-c3-deployment/k8s/frontend-service.yaml
@@ -11,4 +11,5 @@ spec:
     targetPort: 80
   selector:
     service: frontend
+#Make the service type as LoadBalancer to access it from Open Internet
   type: LoadBalancer    
