--- a/udacity-c3-deployment/k8s/aws-secret.yaml
+++ b/udacity-c3-deployment/k8s/aws-secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: aws-secret
 type: Opaque
 data:
-  credentials: W2RlZmF1bHRdCmF3c19hY2Nlc3Nfa2V5X2lkID0gQUtJQVlKUUtCR1JESUZCUEtISEwKYXdzX3NlY3JldF9hY2Nlc3Nfa2V5ID0gSVlKMmw3NkF3SXNGNXY4MWx5Z2x3NS9IU2thSHp2c040S3VLbVhURQo=
+  credentials: ****************************************************************************
