--- a/udacity-c3-deployment/k8s/env-secret.yaml
+++ b/udacity-c3-deployment/k8s/env-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: env-secret
 type: Opaque
 data:
-  POSTGRESS_USERNAME: Y2ZpdHVkYWdyYW1kZXZtZWhlZGk=
-  POSTGRESS_PASSWORD: Y2ZpdHVkYWdyYW1kZXZtZWhlZGk=
+  POSTGRESS_USERNAME: ***************************
+  POSTGRESS_PASSWORD: ***************************
